--- a/src/components/Section/Section.module.css
+++ b/src/components/Section/Section.module.css
@@ -1,12 +1,6 @@
 .section {
- padding-top: 30px;
- padding-bottom: 30px; 
+ padding: 30px; 
 }
-
-.section:not(:last-child) {
-  margin-bottom: 30px;
-}
-
 .title {
   text-align: center;
 }
